# nativefiledialog

./: .gitignore  CMakeLists.txt  README.md  notes.txt
src/: common.h  demo.cpp  demo.h  nfd_cocoa.m  nfd_common.c  nfd_common.h  nfd_gtk.c  nfd_win.cpp  simple_exec.h
src/include/: nfd.h
